# lumina-convert

./: .gitignore  package-lock.json  package.json  setup-win.bat  setup.bat  setup.ps1  使用说明.txt
.github/workflows/: build-libvips-hevc.yml  build-win.yml  main.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/libvips-win/: .cargo_vcs_info.json  Cargo.toml  build.rs
src-tauri/libvips-win/src/: bindings.rs  image.rs  lib.rs  ops.rs  utils.rs
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
