[package]
name = "lumina-convert"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumina_convert_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[patch.crates-io]
libvips = { path = "libvips-win" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38", features = ["full"] }
rayon = "1.10"
walkdir = "2.5"
tauri-plugin-dialog = "2.7.1"
num_cpus = "1.17"
libvips = "2.3"

# 🚨 跨平台打开目录/文件
open = "5"

# 🚨 操作系统级线程降级 (UI永不卡顿)
thread-priority = "1"
once_cell = "1.20"

